[feat] ranked poll takes user to ranked results page

--- a/client/index.html
+++ b/client/index.html
@@ -27,6 +27,7 @@
 
     <!-- Controllers -->
     <script src='./app/results/resultsController.js'></script>
+    <script src='./app/resultsrank/resultsrankController.js'></script>
     <script src='./app/uservote/uservoteController.js'></script>
     <script src='./app/userrankvote/userrankvoteController.js'></script>
     <script src='./app/ballotcreation/ballotcreationController.js'></script>
