--- a/client/app/landingpage/landingpageTemplate.html
+++ b/client/app/landingpage/landingpageTemplate.html
@@ -89,7 +89,7 @@
     <div class="col-md-12">
       <div class="footer-container">
         <span class="footer-elements">&copy; Ballotize.io 2016&nbsp;</span>
-          <a href="https://github.com/jimini-js/jimini" target="_blank"><i class="fa fa-github"></i></a>
+          <a href="https://github.com/ballotize/ballotize-io" target="_blank"><i class="fa fa-github"></i></a>
         <span class="footer-elements">Daisy Tsao&nbsp;</span>
           <a href="https://github.com/madcurie" target="_blank"><i class="fa fa-github"></i></a>&nbsp;
           <a href="https://www.linkedin.com/in/daisytsao" target="_blank"><i class="fa fa-linkedin"></i></a>
@@ -98,7 +98,7 @@
           <a href="https://www.linkedin.com/in/carlbernardo" target="_blank"><i class="fa fa-linkedin"></i></a>
         <span class="footer-elements">Shin Adachi&nbsp;</span>
           <a href="https://github.com/shin064" target="_blank"><i class="fa fa-github"></i></a>&nbsp;
-          <a href="http://www.shinadachi.com" target="_blank"><i class="fa fa-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/shin-adachi-1b6bb1113" target="_blank"><i class="fa fa-linkedin"></i></a>
         <span class="footer-elements">Justin Tan&nbsp;</span>
           <a href="https://github.com/justanman" target="_blank"><i class="fa fa-github"></i></a>&nbsp;
           <a href="https://www.linkedin.com/in/justanman" target="_blank"><i class="fa fa-linkedin"></i></a>
